some twig improvements

--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Edit post
+{% endblock %}
 {% block body %}
 <div class="my-14">
 		<h1 class="text-4xl">Edit blog post</h1>
